--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -13,6 +13,11 @@
     border-radius: 25px;
     padding: 0.5rem 1.5rem 0.5rem 3rem;
   }
+  @media (360px <= width <= 740px) {
+            .search-main{
+              display: none;
+            }
+        }
 </style>
 <nav class="navbar navbar-expand-sm bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
@@ -26,7 +31,7 @@
           <a class="nav-link fw-semibold fs-5 ms-3" href="/listings/new">New Listing</a>
         </div>
 
-        <div class="navbar-nav ms-auto">
+        <div class="navbar-nav ms-auto search-main">
           <form class="d-flex" role="search">
             <input class="form-control me-2 search-input" type="search" placeholder="search destination">
             <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
