--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,7 +6,14 @@
             top: 3.5rem;
             background-color: white;
             z-index: 1;
+            display: flex;
+            overflow-x: auto;
         }
+        
+        .filters::-webkit-scrollbar{
+            width: 0;
+        }
+
         .filter{
             text-align: center;
             margin-right: 1.75rem;
@@ -20,8 +27,24 @@
         .filter span{
             font-size: 0.9rem;
         }
+        .search-2{
+            display: none;
+        }
+        @media (360px <= width <=740px) {
+            .search-2{
+            display: flex;
+        }
+        }
 
     </style>
+
+        <div class="search-2 my-3">
+            <form class="d-flex" role="search"></form>
+                <input class="form-control me-2 search-input" type="search" placeholder="search destination">
+                <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+              </form>
+        </div>
+
          <div class="filters mb-4 d-flex flex-wrap ">
             <div class="filter">
                 <div><i class="fa-solid fa-fire"></i></div>
