--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -9,7 +9,7 @@
             display: flex;
             overflow-x: auto;
         }
-        
+
         .filters::-webkit-scrollbar{
             width: 0;
         }
@@ -45,7 +45,7 @@
               </form>
         </div>
 
-         <div class="filters mb-4 d-flex flex-wrap ">
+         <div class="filters mb-4">
             <div class="filter">
                 <div><i class="fa-solid fa-fire"></i></div>
                 <span>Trending</span>
